// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Broadcast a start event. 1`] = `
Object {
  "name": "web",
  "params": Object {
    "id": "new",
  },
}
`;

exports[`Broadcast a start event. 2`] = `
Object {
  "name": "web",
  "params": Object {
    "id": "old",
  },
}
`;

exports[`Broadcast a success event. 1`] = `
Object {
  "name": "web",
  "params": Object {
    "id": "new",
  },
}
`;

exports[`Broadcast a success event. 2`] = `
Object {
  "name": "web",
  "params": Object {
    "id": "old",
  },
}
`;

exports[`Find the route by the location. 1`] = `
Route {
  "component": [Function],
  "dismissalDelay": undefined,
  "generateLocation": [Function],
  "generateUri": [Function],
  "isAbstract": false,
  "loadComponent": undefined,
  "matchPattern": "/",
  "matchReg": /\\^\\\\/\\$/,
  "name": "home",
  "onEnter": [Function],
  "parents": Array [],
  "resolve": Object {},
  "uri": "/",
  "uriParamKeys": Array [],
  "uriTemplate": "/",
}
`;

exports[`Find the router belong a abstract router by the location. 1`] = `
Route {
  "component": [Function],
  "dismissalDelay": undefined,
  "generateLocation": [Function],
  "generateUri": [Function],
  "isAbstract": false,
  "loadComponent": undefined,
  "matchPattern": "/settings",
  "matchReg": /\\^\\\\/settings\\$/,
  "name": "settings.account",
  "onEnter": undefined,
  "parents": Array [
    Route {
      "component": [Function],
      "dismissalDelay": undefined,
      "generateLocation": [Function],
      "generateUri": [Function],
      "isAbstract": true,
      "loadComponent": undefined,
      "matchPattern": "/settings",
      "matchReg": /\\^\\\\/settings\\$/,
      "name": "settings",
      "onEnter": undefined,
      "parents": Array [],
      "resolve": Object {},
      "uri": "/settings",
      "uriParamKeys": Array [],
      "uriTemplate": "/settings",
    },
  ],
  "resolve": Object {},
  "uri": "",
  "uriParamKeys": Array [],
  "uriTemplate": "/settings",
}
`;

exports[`Get the current route. 1`] = `
Route {
  "component": [Function],
  "dismissalDelay": undefined,
  "generateLocation": [Function],
  "generateUri": [Function],
  "isAbstract": false,
  "loadComponent": undefined,
  "matchPattern": "/",
  "matchReg": /\\^\\\\/\\$/,
  "name": "home",
  "onEnter": [Function],
  "parents": Array [],
  "resolve": Object {},
  "uri": "/",
  "uriParamKeys": Array [],
  "uriTemplate": "/",
}
`;

exports[`Go to a page. 1`] = `
Array [
  "PUSH",
  Route {
    "component": [Function],
    "dismissalDelay": undefined,
    "generateLocation": [Function],
    "generateUri": [Function],
    "isAbstract": false,
    "loadComponent": undefined,
    "matchPattern": "/",
    "matchReg": /\\^\\\\/\\$/,
    "name": "home",
    "onEnter": [Function],
    "parents": Array [],
    "resolve": Object {},
    "uri": "/",
    "uriParamKeys": Array [],
    "uriTemplate": "/",
  },
  Object {},
  Route {
    "component": [Function],
    "dismissalDelay": undefined,
    "generateLocation": [Function],
    "generateUri": [Function],
    "isAbstract": false,
    "loadComponent": undefined,
    "matchPattern": "/login",
    "matchReg": /\\^\\\\/login\\$/,
    "name": "login",
    "onEnter": [Function],
    "parents": Array [],
    "resolve": Object {},
    "uri": "/login",
    "uriParamKeys": Array [],
    "uriTemplate": "/login",
  },
  Object {},
  Object {
    "params": Object {},
  },
]
`;

exports[`Go to a page. 2`] = `
<div>
  Login
</div>
`;

exports[`Reload the page. 1`] = `
Array [
  "RELOAD",
  Route {
    "component": [Function],
    "dismissalDelay": undefined,
    "generateLocation": [Function],
    "generateUri": [Function],
    "isAbstract": false,
    "loadComponent": undefined,
    "matchPattern": "/",
    "matchReg": /\\^\\\\/\\$/,
    "name": "home",
    "onEnter": [Function],
    "parents": Array [],
    "resolve": Object {},
    "uri": "/",
    "uriParamKeys": Array [],
    "uriTemplate": "/",
  },
  Object {},
  Route {
    "component": [Function],
    "dismissalDelay": undefined,
    "generateLocation": [Function],
    "generateUri": [Function],
    "isAbstract": false,
    "loadComponent": undefined,
    "matchPattern": "/",
    "matchReg": /\\^\\\\/\\$/,
    "name": "home",
    "onEnter": [Function],
    "parents": Array [],
    "resolve": Object {},
    "uri": "/",
    "uriParamKeys": Array [],
    "uriTemplate": "/",
  },
  Object {},
  Object {
    "params": Object {},
  },
]
`;

exports[`Render the error component when reload with error. 1`] = `
<div>
  Error
</div>
`;

exports[`Render the error component when the history was changed with error. 1`] = `
<div>
  Error
</div>
`;

exports[`Render the error component when the router was started with error. 1`] = `
<div>
  Error
</div>
`;

exports[`Render the error page without the error component. 1`] = `
<div>
  Home
</div>
`;

exports[`Render the error page. 1`] = `
<div>
  Error
</div>
`;

exports[`Start dispatch routes. 1`] = `
Array [
  "INITIAL",
  null,
  null,
  Route {
    "component": [Function],
    "dismissalDelay": undefined,
    "generateLocation": [Function],
    "generateUri": [Function],
    "isAbstract": false,
    "loadComponent": undefined,
    "matchPattern": "/",
    "matchReg": /\\^\\\\/\\$/,
    "name": "home",
    "onEnter": [Function],
    "parents": Array [],
    "resolve": Object {},
    "uri": "/",
    "uriParamKeys": Array [],
    "uriTemplate": "/",
  },
  Object {},
  Object {
    "params": Object {},
  },
]
`;

exports[`Start dispatch routes. 2`] = `
<div>
  Home
</div>
`;
